# pytimefliplib

./: .gitignore  Makefile  README.md  protocol_v3_corrected.md  pyproject.toml  release_it.sh  requirements.txt  setup.py
.github/workflows/: tests.yml
pytimefliplib/: __init__.py  async_client.py
pytimefliplib/scripts/: __init__.py  check.py  clear_history.py  discover.py  set_name.py  set_password.py
requirements/: requirements.in
