[project]
name = "pytimefliplib"
dynamic = ["version"]
authors = [
    {name = "Pierre Beaujean", email = "pierreb24@gmail.com"},
]

description = "A Python library TimeFlip devices v3 and v4"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    'bleak',
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-quotes",
    "autopep8",
    "bump2version"
]

[project.scripts]
timeflip-check = 'pytimefliplib.scripts.check:main'
timeflip-clear-history = 'pytimefliplib.scripts.clear_history:main'
timeflip-discover = 'pytimefliplib.scripts.discover:main'
timeflip-set-name = 'pytimefliplib.scripts.set_name:main'
timeflip-set-passwd = 'pytimefliplib.scripts.set_password:main'

[tool.setuptools]
packages = ['pytimefliplib', 'pytimefliplib.scripts']

[tool.setuptools.dynamic]
version = {attr = "pytimefliplib.__version__"}